Light correctif on scrollbar

--- a/css/styleindex.css
+++ b/css/styleindex.css
@@ -1,6 +1,10 @@
 /* ---------------------------------------------------------------- GENERAL RULES --------------------------------------------------------------- */
 *{
    overflow-x: hidden;
+
+}
+*::-webkit-scrollbar {
+    width: 0!important;
 }
 html {
     scroll-behavior: smooth;
@@ -63,7 +67,6 @@ a {
     position: absolute;
     right: 51%;
     margin-top: 6rem;
-    box-shadow: 0px 0px 20px rgb(0 0 0 / 50%);
 
 
 }
@@ -76,7 +79,6 @@ a {
     position: absolute;
     left: 49%;
     margin-top: 8.5rem;
-    box-shadow: 0px 0px 20px rgb(0 0 0 / 50%);
 
 }
 
@@ -99,7 +101,7 @@ a {
     z-index: -2;
     position: absolute;
     left: 49%;
-    box-shadow: 0px 0px 20px rgb(0 0 0 / 50%);
+    box-shadow: 0px 0px 25px rgb(0 0 0 / 30%);
 
 }
 
